:sparkles: Type optional journey actions in Python SDK
